--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
     </svg>
     <div class="mo-container"> </div>
   </div>
-  
+<link rel="stylesheet" href="cs.css">
+<script src="jva.js"></script>
   
   <audio class="blup" style="display: none">
     <source src="https://www.freesound.org/data/previews/265/265115_4373976-lq.mp3" type="audio/ogg">
