--- a/index.html
+++ b/index.html
@@ -1,3 +1,10 @@
+html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>My Project</title>
+  <link rel="stylesheet" href="cs.css"> <!-- Link to CSS -->
+</head>
+<body>
 <div class="container">
     <svg class="svg-container" version="1.1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 500 200">
       <line class="line line--left" x1="10" y1="17" x2="10" y2="183"> </line>
@@ -15,7 +22,6 @@
     </svg>
     <div class="mo-container"> </div>
   </div>
-<link rel="stylesheet" href="cs.css">
 <script src="jva.js"></script>
   
   <audio class="blup" style="display: none">
